entity: contest & problem

--- a/TestDB/App.config
+++ b/TestDB/App.config
@@ -8,7 +8,7 @@
   </startup>
   <connectionStrings>
     <add name="sqlitedb" connectionString="Data Source=D:/cena.s3db;" providerName="System.Data.SQLite" />
-    <add name="mysqldb" connectionString="server=localhost;user id=root;password=0S^6uk)C~frT;database=cena;" providerName="MySQL.Data.MySQLClient" />
+    <add name="mysqldb" connectionString="server=localhost;user id=root;password=chshcan;database=cena;" providerName="MySQL.Data.MySQLClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
