--- a/CenaPlus.Server/App.config
+++ b/CenaPlus.Server/App.config
@@ -3,6 +3,13 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <system.serviceModel>
+    <services>
+      <service name="CenaPlus.Server.Bll.LocalCenaPlusServer">
+        <endpoint binding="netTcpBinding" contract="CenaPlus.Network.ICenaPlusServer"/>
+      </service>
+    </services>
+  </system.serviceModel>
   <entityFramework>
   </entityFramework>
 </configuration>
