--- a/CenaPlus.Entity/CenaPlus.Entity.csproj
+++ b/CenaPlus.Entity/CenaPlus.Entity.csproj
@@ -54,12 +54,14 @@
     <Compile Include="Contest.cs" />
     <Compile Include="Problem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Records.cs" />
+    <Compile Include="Record.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="mysql-testdata.sql" />
     <Content Include="mysql.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
