--- a/CenaPlus.Server/packages.config
+++ b/CenaPlus.Server/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="ModernUI.WPF" version="1.0.5" targetFramework="net40" />
+  <package id="MySql.Data" version="6.6.5" targetFramework="net40" />
+  <package id="Ventamatic.MySql.Data.Entity" version="6.6.5" targetFramework="net40" />
 </packages>
