--- a/CenaPlus.Server/App.config
+++ b/CenaPlus.Server/App.config
@@ -3,10 +3,18 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="mysqldb" connectionString="Server=localhost;Port=3306;Database=cenaplus;Uid=root;" providerName="MySql.Data.MySQLClient" />
+  </connectionStrings>
+  <system.data>
+    <DbProviderFactories>
+      <add invariant="MySql.Data.MySQLClient" description=".Net Framework Data Provider for MySql" type="MySql.Data.MySqlClient.MySqlFactory, MySql.Data" />
+    </DbProviderFactories>
+  </system.data>
   <system.serviceModel>
     <services>
       <service name="CenaPlus.Server.Bll.LocalCenaPlusServer">
-        <endpoint binding="netTcpBinding" contract="CenaPlus.Network.ICenaPlusServer"/>
+        <endpoint binding="netTcpBinding" contract="CenaPlus.Network.ICenaPlusServer" />
       </service>
     </services>
   </system.serviceModel>
