login & contest list

--- a/CenaPlus.Client/CenaPlus.Client.csproj
+++ b/CenaPlus.Client/CenaPlus.Client.csproj
@@ -117,6 +117,7 @@
     </Page>
     <Compile Include="Bll\CenaPlusServerProxy.cs" />
     <Compile Include="Bll\Foobar.cs" />
+    <Compile Include="Bll\ServerCallback.cs" />
     <Compile Include="Content\Compiler.xaml.cs">
       <DependentUpon>Compiler.xaml</DependentUpon>
     </Compile>
