--- a/CenaPlus.Server/App.config
+++ b/CenaPlus.Server/App.config
@@ -8,16 +8,9 @@
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
-      <add invariant="MySql.Data.MySQLClient" description=".Net Framework Data Provider for MySql" type="MySql.Data.MySqlClient.MySqlFactory, MySql.Data" />
+      <add name="MySql Data Provider" invariant="MySql.Data.MySQLClient" description=".Net Framework Data Provider for MySql" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data" />
     </DbProviderFactories>
   </system.data>
-  <system.serviceModel>
-    <services>
-      <service name="CenaPlus.Server.Bll.LocalCenaPlusServer">
-        <endpoint binding="netTcpBinding" contract="CenaPlus.Network.ICenaPlusServer" />
-      </service>
-    </services>
-  </system.serviceModel>
   <entityFramework>
   </entityFramework>
 </configuration>
