--- a/CenaPlus.Server/CenaPlus.Server.csproj
+++ b/CenaPlus.Server/CenaPlus.Server.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Bll\AccessDeniedException.cs" />
     <Compile Include="Bll\CenaPlusServerHost.cs" />
     <Compile Include="Bll\LocalCenaServer.cs" />
+    <Compile Include="Bll\NotFoundException.cs" />
     <Compile Include="Dal\DB.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
