user assigned contests

--- a/TestNetwork/App.config
+++ b/TestNetwork/App.config
@@ -6,20 +6,12 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
-  <system.serviceModel>
-    <services>
-      <service name="CenaPlus.Server.Bll.LocalCenaPlusServer">
-        <endpoint binding="netTcpBinding" bindingConfiguration="tcpBinding" contract="CenaPlus.Network.ICenaPlusServer" />
-      </service>
-    </services>
-    <bindings>
-      <netTcpBinding>
-        <binding name="tcpBinding">
-          <security mode="None"/>
-        </binding>
-      </netTcpBinding>
-    </bindings>
-  </system.serviceModel>
-  <entityFramework>
-  </entityFramework>
+  <connectionStrings>
+    <add name="mysqldb" connectionString="Server=localhost;Port=3311;Database=cenaplus;Uid=root;" providerName="MySql.Data.MySQLClient" />
+  </connectionStrings>
+  <system.data>
+    <DbProviderFactories>
+      <add name="MySql Data Provider" invariant="MySql.Data.MySQLClient" description=".Net Framework Data Provider for MySql" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
