Contest Manage Pages

--- a/CenaPlus.Server/CenaPlus.Server.csproj
+++ b/CenaPlus.Server/CenaPlus.Server.csproj
@@ -87,6 +87,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ServerMode\Contest\Main.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ServerMode\CreateAUser.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -95,15 +99,25 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ServerMode\Tests.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Settings\About.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Compile Include="ServerMode\Contest\Main.xaml.cs">
+      <DependentUpon>Main.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ServerMode\CreateAUser.xaml.cs">
       <DependentUpon>CreateAUser.xaml</DependentUpon>
     </Compile>
     <Compile Include="ServerMode\CreateUsers.xaml.cs">
       <DependentUpon>CreateUsers.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ServerMode\Tests.xaml.cs">
+      <DependentUpon>Tests.xaml</DependentUpon>
     </Compile>
     <Compile Include="Settings\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
