new remote log in page

--- a/CenaPlus.Client/CenaPlus.Client.csproj
+++ b/CenaPlus.Client/CenaPlus.Client.csproj
@@ -103,6 +103,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Remote\Remote.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Settings\Compiler.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -128,6 +132,9 @@
     <Compile Include="Bll\ServerDiscoverer.cs" />
     <Compile Include="Remote\Hack.xaml.cs">
       <DependentUpon>Hack.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Remote\Remote.xaml.cs">
+      <DependentUpon>Remote.xaml</DependentUpon>
     </Compile>
     <Compile Include="Settings\Compiler.xaml.cs">
       <DependentUpon>Compiler.xaml</DependentUpon>
