--- a/CenaPlus.Server/CenaPlus.Server.csproj
+++ b/CenaPlus.Server/CenaPlus.Server.csproj
@@ -101,6 +101,22 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ServerMode\Online.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ServerMode\ServerSettings\Circulars.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ServerMode\ServerSettings\Compilers.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ServerMode\ServerSettings\ServerSettings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ServerMode\Tests.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -117,6 +133,18 @@
     </Compile>
     <Compile Include="ServerMode\CreateUsers.xaml.cs">
       <DependentUpon>CreateUsers.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ServerMode\Online.xaml.cs">
+      <DependentUpon>Online.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ServerMode\ServerSettings\Circulars.xaml.cs">
+      <DependentUpon>Circulars.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ServerMode\ServerSettings\Compilers.xaml.cs">
+      <DependentUpon>Compilers.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ServerMode\ServerSettings\ServerSettings.xaml.cs">
+      <DependentUpon>ServerSettings.xaml</DependentUpon>
     </Compile>
     <Compile Include="ServerMode\Tests.xaml.cs">
       <DependentUpon>Tests.xaml</DependentUpon>
@@ -182,9 +210,7 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NodeMode\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
