--- a/CenaPlus.Server/App.config
+++ b/CenaPlus.Server/App.config
@@ -12,5 +12,6 @@
     </DbProviderFactories>
   </system.data>
   <entityFramework>
+    <defaultConnectionFactory type="MySql.Data.MySqlClient.MySqlClientFactory,MySql.Data" />
   </entityFramework>
 </configuration>
